--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "testing-challenge",
+	"author": "Laryna Billinghurst",
 	"version": "1.0.0",
 	"description": "Testing Sprint Challenge",
 	"main": "index.js",
@@ -12,17 +13,21 @@
 		"url": "git+https://github.com/LambdaSchool/Sprint-Challenge--Testing.git"
 	},
 	"keywords": [],
-	"author": "Lambda School",
 	"license": "ISC",
 	"bugs": {
 		"url": "https://github.com/LambdaSchool/Sprint-Challenge--Testing/issues"
 	},
 	"homepage": "https://github.com/LambdaSchool/Sprint-Challenge--Testing#readme",
 	"dependencies": {
+		"dotenv": "^7.0.0",
 		"express": "^4.16.4"
 	},
 	"devDependencies": {
 		"jest": "^23.6.0",
+		"nodemon": "^1.18.11",
 		"supertest": "^3.3.0"
+	},
+	"jest": {
+		"testEnvironment": "node"
 	}
 }
