--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"description": "Testing Sprint Challenge",
 	"main": "index.js",
 	"scripts": {
-		"test": "jest --watch --verbose",
+		"test": "jest --watch",
 		"start": "nodemon index.js"
 	},
 	"repository": {
@@ -28,8 +28,5 @@
 		"jest": "^23.6.0",
 		"nodemon": "^1.18.11",
 		"supertest": "^3.3.0"
-	},
-	"jest": {
-		"testEnvironment": "node"
 	}
 }
